# ynab-to-actual

./: .gitignore  .yarnrc.yml  LICENSE.txt  README.md  emojis.py  eslint.config.mjs  example.py  inverse-example.py  obfuscate.py  package.json  pyproject.toml  tsconfig.json
src/: import.ts  months.ts  util.ts
